# OCR-Prossesin-System

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  env.production.example
analytics/: .env.example  pyproject.toml
analytics/scripts/: create_meta_existing.py  eval_extractor.py  generate_synthetic_invoices.py  ingest_docile.py  setup.sh
analytics/src/analytics/: __init__.py  config.py
analytics/src/analytics/dashboards/: app.py
analytics/src/analytics/dashboards/pages/: portfolio.py  sample_prototype.py  sample_review_queue.py
analytics/src/analytics/dataset/: docile.py  meta.py  synthetic.py
analytics/src/analytics/db/: __init__.py  client.py  portfolio_queries.py  queries.py  sample_queries.py  sample_review_queries.py
analytics/src/analytics/processing/: transforms.py
analytics/tests/: conftest.py  test_config.py  test_dataset_meta.py  test_db_client.py  test_generate_synthetic.py  test_ingest_docile.py  test_portfolio_dashboard.py  test_portfolio_queries.py  test_sample_prototype_queries.py  test_transforms.py
contracts/: README.md
docs/: public-release.md
scripts/: check-prd.sh  get_google_token.py  lint-shell.sh
services/sample-accounting-ai/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/sample-accounting-ai/src/: _operators.py  config.py  main.py
services/sample-accounting-ai/src/api/: routes.py  schemas.py
services/sample-accounting-ai/src/eval/: parity.py
services/sample-accounting-ai/src/graph/: invoice_graph.py  state.py
services/sample-accounting-ai/src/graph/nodes/: extract.py  fetch_document.py  ocr.py  parse_xml.py  persist.py  validate.py
services/sample-accounting-ai/src/graph/nodes/extract_agents/: __init__.py  _llm.py  header.py  lineas.py  prompts.py  totales.py  types.py  validador.py
services/sample-accounting-ai/src/models/: document.py  errors.py  invoice.py
services/sample-accounting-ai/src/services/: llm_service.py  mistral_client.py  ocr_service.py  supabase_service.py
services/sample-accounting-ai/src/utils/: pii_mask.py
services/sample-accounting-ai/tests/: conftest.py  test_parity_gate.py
services/sample-accounting-ai/tests/golden/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json  case_006.json  case_007.json  case_008.json  case_009.json  case_010.json  case_011.json  case_012.json  case_013.json  case_014.json  case_015.json  case_016.json  case_017.json  case_018.json  case_019.json  case_020.json  case_021.json
services/sample-accounting-ai/tests/integration/: test_graph_e2.py  test_graph_stub.py  test_pipeline_e2e.py
services/sample-accounting-ai/tests/unit/: test_contract_drift.py  test_document_format.py  test_extract_decimal_validation.py  test_extract_node.py  test_fetch_document.py  test_golden_loader.py  test_health.py  test_health_endpoint.py  test_invoice_graph.py  test_langsmith_tracing.py  test_mistral_client.py  test_models.py  test_ocr_node.py  test_parity.py  test_parse_xml.py  test_persist_node.py  test_pii_mask.py  test_pipeline_benchmark.py  test_process_endpoint.py  test_process_invoice_alias.py  test_sentry_integration.py
services/sample-accounting-ai/tests/unit/extract_agents/: test_header.py  test_lineas.py  test_llm.py  test_prompts.py  test_totales.py  test_types.py  test_validador.py
templates/: metrics-dashboard.md  prd-checklist.md  prd-full-template.md  prd-lite-template.md  proposal-template.md  sop-template.md
trigger/: package-lock.json  package.json  (+3 more)
(+237 files in other folders)
