[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agencia-analytics"
version = "0.1.0"
description = "Client analytics dashboards for Agencia AI"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.11.0",
    "pydantic-settings>=2.7.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "streamlit>=1.41.0",
    "Levenshtein>=0.23.0",
    "fpdf2>=2.7.9",
    "faker>=24.0.0",
    "datasets>=2.18.0",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.9.0",
    "scikit-image>=0.22.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pandas-stubs>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
markers = [
    "integration: marks tests requiring external services (deselect with '-m not integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["analytics"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["analytics"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*"]
ignore_missing_imports = true
