[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-accounting-ai"
version = "0.1.0"
description = "AI service for Sample Accounting invoice processing — FastAPI + LangGraph"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # AI orchestration
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # LLM / OCR
    # mistralai is the official Mistral AI Python SDK (https://pypi.org/project/mistralai/)
    "mistralai>=1.0.0,<2.0.0",
    # Fiscal / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.2",
    # XML / SAF-T (E6+, but scaffold now)
    "lxml>=5.3.0",
    "xmlschema>=3.4.0",
    # Database
    "supabase>=2.10.0",
    # Observability
    "langsmith>=0.8.18",
    "sentry-sdk[fastapi]>=2.0.0",
    # Utilities
    "rapidfuzz>=3.10.0",
    "python-multipart>=0.0.31",
    "httpx>=0.28.0",
    # Security-pinned transitive dependencies
    "cryptography>=48.0.1",
    "PyJWT[crypto]>=2.13.0",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
